--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,13 +1,13 @@
 mixin checkbox({ title, description, name })
   label.checkbox
-    input(class="checkbox__input" type="checkbox" checked=attributes.checked name=name)
+    input.checkbox__input(type="checkbox", checked=attributes.checked, name=name)
     span.checkbox__box
     if description
       span.checkbox__text.checkbox__text_rich
         span.checkbox__title
-          !=title
+          != title
         span.checkbox__description
-          !=description
+          != description
     else
       span.checkbox__text
-        !=title
+        != title
