--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -3,15 +3,21 @@ mixin date-dropdown({ label1, label2, name1, name2 })
     .date-dropdown__wrapper
       .date-dropdown__label.js-date-dropdown__label= label1
       .date-dropdown__header
-        input(class='date-dropdown__input js-date-dropdown__input'
-          readonly placeholder='ДД.ММ.ГГГГ' name = name1)
-        button(class="date-dropdown__expand-button js-date-dropdown__expand-button" type="button")
-          |expand_more
+        input.date-dropdown__input.js-date-dropdown__input(
+          readonly,
+          placeholder="ДД.ММ.ГГГГ",
+          name=name1
+        )
+        button.date-dropdown__expand-button.js-date-dropdown__expand-button(type="button")
+          | expand_more
     if label2
       .date-dropdown__wrapper
         .date-dropdown__label= label2
         .date-dropdown__header
-          input(class='date-dropdown__input js-date-dropdown__input'
-            readonly placeholder='ДД.ММ.ГГГГ' name = name2)
-          button(class="date-dropdown__expand-button js-date-dropdown__expand-button" type="button")
-            |expand_more
+          input.date-dropdown__input.js-date-dropdown__input(
+            readonly,
+            placeholder="ДД.ММ.ГГГГ",
+            name=name2
+          )
+          button.date-dropdown__expand-button.js-date-dropdown__expand-button(type="button")
+            | expand_more
