--- a/src/components/type-example/type-example.pug
+++ b/src/components/type-example/type-example.pug
@@ -1,10 +1,10 @@
 mixin type-example({ tag, text })
   -
     const classes = {
-      "H1": "type-example__text_size_xl",
-      "H2": "type-example__text_size_l",
-      "H3": "type-example__text_size_m",
-      "Body": "type-example__text_size_s"
+      'H1': 'type-example__text_size_xl',
+      'H2': 'type-example__text_size_l',
+      'H3': 'type-example__text_size_m',
+      'Body': 'type-example__text_size_s'
     }
 
   .type-example(class=`${classes[tag]}`)
