--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -11,7 +11,7 @@ html(lang="ru")
     title= title
   body
     block header
-      +header()
+      +header
     block content
     block footer
-      +footer()
+      +footer
