--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -1,8 +1,8 @@
 extends /layouts/main
 include /components/registration-form/registration-form
 block variables
-  -const title = "Регистрация"
+  - const title = "Регистрация";
 block content
   .registration
     .registration__form
-      +registration-form()
+      +registration-form
