--- a/src/components/chart/chart.pug
+++ b/src/components/chart/chart.pug
@@ -1,13 +1,13 @@
-mixin chart()
+mixin chart
   .chart.js-chart
-    svg(class="chart__units" width="122" height="122" viewBox="0 0 34 34")
-      circle(class="chart__unit js-chart__unit" r="15.9" cx="50%" cy="50%")
-      circle(class="chart__unit js-chart__unit" r="15.9" cx="50%" cy="50%")
-      circle(class="chart__unit js-chart__unit" r="15.9" cx="50%" cy="50%")
-      circle(class="chart__unit js-chart__unit" r="15.9" cx="50%" cy="50%")
-      g(class="chart__text")
-        text(class="chart__number js-chart__number" x="50%" y="50%")
-        text(class="chart__label" x="50%" y="50%") голосов
+    svg.chart__units(width="122", height="122", viewBox="0 0 34 34")
+      circle.chart__unit.js-chart__unit(r="15.9", cx="50%", cy="50%")
+      circle.chart__unit.js-chart__unit(r="15.9", cx="50%", cy="50%")
+      circle.chart__unit.js-chart__unit(r="15.9", cx="50%", cy="50%")
+      circle.chart__unit.js-chart__unit(r="15.9", cx="50%", cy="50%")
+      g.chart__text
+        text.chart__number.js-chart__number(x="50%", y="50%")
+        text.chart__label(x="50%", y="50%") голосов
     ul.chart__legend
       li.chart__legend-item Великолепно
       li.chart__legend-item Хорошо
