--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,20 +1,31 @@
 mixin dropdown(obj)
-  -const {label, items, placeholder, buttons, expanded = '', type, name = null } = obj
-  div(class='dropdown js-dropdown' data-type = type)
+  - const { label, items, placeholder, buttons, expanded = "", type, name = null } = obj;
+  .dropdown.js-dropdown(data-type=type)
     p.dropdown__label= label
     .dropdown__header.js-dropdown__header(class=`${expanded && 'dropdown__header_active'}`)
-      input(class="dropdown__input js-dropdown__input" readonly placeholder=placeholder type='text' name=name)
-      button(class="dropdown__button-expand" type="button") expand_more
+      input.dropdown__input.js-dropdown__input(
+        readonly,
+        placeholder=placeholder,
+        type="text",
+        name=name
+      )
+      button.dropdown__button-expand(type="button") expand_more
     .dropdown__inner.js-dropdown__inner(class=`${expanded && 'dropdown__inner_active'}`)
-      ul(class="dropdown__list")
+      ul.dropdown__list
         each el in items
-          li(class="dropdown__item js-dropdown__item" data-type=el)
+          li.dropdown__item.js-dropdown__item(data-type=el)
             span.dropdown__item-text= el
             .dropdown__item-inner
-              button(class="dropdown__item-button js-dropdown__item-button js-dropdown__item-button_icon_minus" type="button" data-button="minus") -
+              button.dropdown__item-button.js-dropdown__item-button.js-dropdown__item-button_icon_minus(
+                type="button",
+                data-button="minus"
+              ) -
               span.dropdown__item-amount.js-dropdown__item-amount 0
-              button(class="dropdown__item-button js-dropdown__item-button" type="button" data-button="plus") +
+              button.dropdown__item-button.js-dropdown__item-button(
+                type="button",
+                data-button="plus"
+              ) +
       if buttons
         .dropdown__buttons
-          button(class="dropdown__button-clear js-dropdown__button-clear" type="button") очистить
-          button(class="dropdown__button-apply js-dropdown__button-apply" type="button") применить
+          button.dropdown__button-clear.js-dropdown__button-clear(type="button") очистить
+          button.dropdown__button-apply.js-dropdown__button-apply(type="button") применить
