--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -3,9 +3,12 @@ mixin expandable-checkbox-list({ label, list, expanded = false })
     .expandable-checkbox-list__wrapper.js-expandable-checkbox-list__wrapper
       span.expandable-checkbox-list__label= label
       button.expandable-checkbox-list__button-expand.js-expandable-checkbox-list__button-expand(
-        class=`${expanded && 'expandable-checkbox-list__button-expand_active'}`) expand_more
+        class=`${expanded && 'expandable-checkbox-list__button-expand_active'}`
+      ) expand_more
 
-    ul.expandable-checkbox-list__items.js-expandable-checkbox-list__items(class=`${expanded && 'expandable-checkbox-list__items_active'}`)
+    ul.expandable-checkbox-list__items.js-expandable-checkbox-list__items(
+      class=`${expanded && 'expandable-checkbox-list__items_active'}`
+    )
       each item in checkboxList
         li.expandable-checkbox-list__item
-          +checkbox({ title: item.title, name: item.name })(checked = item.checked)
+          +checkbox({ title: item.title, name: item.name })(checked=item.checked)
