--- a/src/components/registration-form/registration-form.pug
+++ b/src/components/registration-form/registration-form.pug
@@ -3,7 +3,7 @@ include /components/radio/radio
 include /components/toggle/toggle
 include /components/button/button
 
-mixin registration-form()
+mixin registration-form
   form.registration-form.js-registration-form
     .registration-form__inner
       h3.registration-form__title Регистрация аккаунта
@@ -14,9 +14,9 @@ mixin registration-form()
           +input-text({ placeholder: 'Фамилия', name: 'lastname' })
       .registration-form__radio
         .registration-form__radio-button
-          +radio('Мужчина')(name='gender', checked)
+          +radio('Мужчина')(name="gender", checked)
         .registration-form__radio-button
-          +radio('Женщина')(name='gender')
+          +radio('Женщина')(name="gender")
       .registration-form__masked-field
         +input-text({ label: 'дата рождения', placeholder: 'ДД.ММ.ГГГГ', mask: true, type: 'text', name: 'birthday' })
       .registration-form__text-fields
@@ -27,7 +27,7 @@ mixin registration-form()
       .registration-form__toggle
         +toggle('Получать спецпредложения', 'specials')
       .registration-form__button
-        +button({"tag": "button", "color": "arrow", "text": "зарегистрироваться", "size": "m", "submit": true})
+        +button({ tag: 'button', color: 'arrow', text: 'зарегистрироваться', size: 'm', submit: true })
       .registration-form__login
         span.registration-form__text Уже есть аккаунт на Toxin
-        +button({"color": "white", "tag": "a", "href": "/sign-in.html", "text": "войти", "size": "m"})
+        +button({ color: 'white', tag: 'a', href: '/sign-in.html', text: 'войти', size: 'm' })
