--- a/src/components/search-form/search-form.pug
+++ b/src/components/search-form/search-form.pug
@@ -1,30 +1,12 @@
 include /components/date-dropdown/date-dropdown
 include /components/dropdown/dropdown
 include /components/button/button
-mixin search-form() 
+mixin search-form
   form.search-form.js-search-form
     .search-form__inner
       h2.search-form__title Найдём номера под ваши пожелания
       .search-form__date-dropdown
-        +date-dropdown({
-          label1: 'прибытие',
-          label2: 'выезд',
-          name1: 'arrive',
-          name2: 'leave',
-        })
+        +date-dropdown({ label1: 'прибытие', label2: 'выезд', name1: 'arrive', name2: 'leave', })
       .search-form__dropdown
-        +dropdown({
-          label: 'гости',
-          items: ['взрослые', 'дети', 'младенцы'],
-          type: 'guests',
-          placeholder: 'Сколько гостей',
-          buttons: true,
-          name: 'guests-quantity'
-        })
-      +button({
-        "color": "arrow",
-        "tag": "button",
-        "text": "подобрать номер",
-        "size": "m",
-        "submit": true
-      })
+        +dropdown({ label: 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'guests', placeholder: 'Сколько гостей', buttons: true, name: 'guests-quantity' })
+      +button({ color: 'arrow', tag: 'button', text: 'подобрать номер', size: 'm', submit: true })
