--- a/src/components/social-link/social-link.pug
+++ b/src/components/social-link/social-link.pug
@@ -1,3 +1,3 @@
 mixin social-link({ link, img })
-  a(class="social-link" href=`${link}` target="_blank" rel="noopener noreferrer")
-    img(class="social-link__icon" src=require(`/src/assets/img/icons/${img}.svg`), alt=`${img} link`)
+  a.social-link(href=`${link}`, target="_blank", rel="noopener noreferrer")
+    img.social-link__icon(src=require(`/src/assets/img/icons/${img}.svg`), alt=`${img} link`)
