--- a/src/pages/colors-types/colors-types.pug
+++ b/src/pages/colors-types/colors-types.pug
@@ -4,29 +4,29 @@ include /components/color-example/color-example
 include /components/type-example/type-example
 block variables
   -
-    const title= "Colors & Types"
+    const title= 'Colors & Types'
 
     const colors = [
-      {color: "Dark Shade 100%", code: "#1F2041"},
-      {color: "Dark Shade 75%", code: "#1F2041"},
-      {color: "Dark Shade 50%", code: "#1F2041"},
-      {color: "Dark Shade 25%", code: "#1F2041"},
-      {color: "Dark Shade 5%", code: "#1F2041"},
-      {color: "Purple", code: "#BC9CFF"},
-      {color: "Green", code: "#6FCF97"},
+      {color: 'Dark Shade 100%', code: '#1F2041'},
+      {color: 'Dark Shade 75%', code: '#1F2041'},
+      {color: 'Dark Shade 50%', code: '#1F2041'},
+      {color: 'Dark Shade 25%', code: '#1F2041'},
+      {color: 'Dark Shade 5%', code: '#1F2041'},
+      {color: 'Purple', code: '#BC9CFF'},
+      {color: 'Green', code: '#6FCF97'},
     ]
 
     const types = [
-      {tag: "H1", text: "This one is the sub-section or widget title"},
-      {tag: "H2", text: "Next one is the item title inside widgets"},
-      {tag: "H3", text: "This is a label or CTA text"},
-      {tag: "Body", text: `This is the body text which is used
+      {tag: 'H1', text: 'This one is the sub-section or widget title'},
+      {tag: 'H2', text: 'Next one is the item title inside widgets'},
+      {tag: 'H3', text: 'This is a label or CTA text'},
+      {tag: 'Body', text: `This is the body text which is used
       for most of the design, like paragraphs, lists, etc.`},
     ]
 block content
   .colors-types
     header.colors-types__header
-      +logo()
+      +logo
     .colors-types__container
       .colors-types__column
         each color in colors
