--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -11,23 +11,23 @@ html(lang="ru")
         h3.page-links__title Страницы:
         ul.url-list__pages
           li.url-list__item
-            a(class="url-list__link" href="/landing-page.html") Главная
+            a.url-list__link(href="/landing-page.html") Главная
           li.url-list__item
-            a(class="url-list__link" href="/registration.html") Регистрация
+            a.url-list__link(href="/registration.html") Регистрация
           li.url-list__item
-            a(class="url-list__link" href="/sign-in.html") Вход
+            a.url-list__link(href="/sign-in.html") Вход
           li.url-list__item
-            a(class="url-list__link" href="/search-room.html") Подбор номеров
+            a.url-list__link(href="/search-room.html") Подбор номеров
           li.url-list__item
-            a(class="url-list__link" href="/room-details.html") Информация о номере
+            a.url-list__link(href="/room-details.html") Информация о номере
       .pages-links__wrapper
         h3.page-links__title UI:
         ul.url-list__ui
           li.url-list__item
-            a(class="url-list__link" href="/colors-types.html") Colors and types
+            a.url-list__link(href="/colors-types.html") Colors and types
           li.url-list__item
-            a(class="url-list__link" href="/headers-footers.html") Headers and Footers
+            a.url-list__link(href="/headers-footers.html") Headers and Footers
           li.url-list__item
-            a(class="url-list__link" href="/cards.html") Cards
+            a.url-list__link(href="/cards.html") Cards
           li.url-list__item
-            a(class="url-list__link" href="/form-elements.html") Form elements
+            a.url-list__link(href="/form-elements.html") Form elements
