--- a/src/pages/landing-page/landing-page.pug
+++ b/src/pages/landing-page/landing-page.pug
@@ -1,9 +1,9 @@
 extends /layouts/main
 include /components/search-form/search-form
 block variables
-  -const title = "Toxin - Главная"
+  - const title = "Toxin - Главная";
 block content
   .landing-page
     .landing-page__search-form
-      +search-form()
+      +search-form
     p.landing-page__text Лучшие номера для вашей работы, отдыха и просто вдохновения
