--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -1,8 +1,8 @@
 extends /layouts/main
 include /components/login-form/login-form
 block variables
-  -const title = "Вход"
+  - const title = "Вход";
 block content
   .login
     .login__form
-      +login-form()
+      +login-form
